--- a/src/custom.css
+++ b/src/custom.css
@@ -1,5 +1,6 @@
 :root{
   --bx-shadow: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
+  --bx-shadow-2: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .main-bg{
   background: #f5f5f5;
@@ -28,7 +29,7 @@
   left: 0;
   width: calc(100%);
   /* transform: translateX(-50%); */
-  padding: 1rem 1.5rem 1rem 1.5rem;
+  padding: .5rem 1.5rem .5rem 1.5rem;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   z-index: 100;
@@ -130,4 +131,58 @@
   background-color: #fdb135;
   border-radius: 1rem;
   /* box-shadow: var(--bx-shadow); */
+}
+.search-popup{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #ffffff80;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  z-index: 200;
+  transition: .5s all cubic-bezier(0.65, 0.05, 0.36, 1);
+  opacity: 0;
+  display: none;
+}
+.search-popup.show{
+  display: block;
+  opacity: 1;
+  animation: search-popup .5s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+@keyframes search-popup{
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+.skeleton{
+  width: 100px;
+  height: 100px;
+  background-color: #dcdcdc;
+  animation: skeleton 1.5s infinite linear;
+  opacity: 1;
+}
+@keyframes skeleton{
+  0%{
+    opacity: .25;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: .25;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .navigation{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  .navigation ul{
+    width: 400px;
+  }
 }
