--- a/src/custom.css
+++ b/src/custom.css
@@ -1,6 +1,7 @@
 :root{
   --bx-shadow: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 10px 10px -5px rgb(0 0 0 / 4%);
   --bx-shadow-2: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --bx-shadow-3: inset 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .main-bg{
   background: #f5f5f5;
@@ -8,6 +9,10 @@
 .main{
   min-height: 100vh;
   padding-bottom: 6rem !important;
+  overflow: hidden;
+}
+.main.has-search{
+  height: 100vh;
   overflow: hidden;
 }
 .avatar{
@@ -109,6 +114,10 @@
 }
 
 /* search */
+.search.active{
+  position: relative;
+  z-index: 300;
+}
 .search-input{
   flex: 1;
   vertical-align: middle;
@@ -125,6 +134,22 @@
   font-weight: 700;
   border-radius: 1rem;
 }
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #cacaca;
+  font-weight: normal;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #cacaca;
+  font-weight: normal;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #cacaca;
+  font-weight: normal;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #cacaca;
+  font-weight: normal;
+}
 .search-button{
   width: 50px;
   height: 50px;
@@ -132,28 +157,46 @@
   border-radius: 1rem;
   /* box-shadow: var(--bx-shadow); */
 }
+.search-input,
+.search-button{ transition: .5s all cubic-bezier(0.65, 0.05, 0.36, 1); }
+.search-input.focus,
+.search-button.focus{
+  box-shadow: var(--bx-shadow);
+}
 .search-popup{
   position: fixed;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  background-color: #ffffff80;
+  background-color: #fefefe80;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   z-index: 200;
-  transition: .5s all cubic-bezier(0.65, 0.05, 0.36, 1);
+  transition: .3s all cubic-bezier(0.65, 0.05, 0.36, 1);
   opacity: 0;
+  animation: search-popup-out .5s cubic-bezier(0.65, 0.05, 0.36, 1);
   display: none;
+  /* border-radius: 50%;
+  transform: scale(0); */
 }
 .search-popup.show{
   display: block;
+  /* height: 100%; */
+  /* width: 100%;
+  height: 100%; */
   opacity: 1;
+  /* border-radius: 0;
+  transform: scale(1); */
   animation: search-popup .5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 @keyframes search-popup{
   from{opacity: 0;}
   to{opacity: 1;}
+}
+@keyframes search-popup-out{
+  from{opacity: 1;}
+  to{opacity: 0;}
 }
 
 .skeleton{
@@ -185,4 +228,50 @@
   .navigation ul{
     width: 400px;
   }
+}
+
+.line-height-1{ line-height: 1; }
+
+.button{
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  background-color: #fdb135;
+  border-radius: 1rem;
+  box-shadow: var(--bx-shadow);
+  transition: .5s all cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+.button:hover{
+  box-shadow: var(--bx-shadow-2);
+}
+.button:active{
+  box-shadow: var(--bx-shadow-3);
+}
+
+/* sort */
+.sort ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.sort ul li p{
+  position: relative;
+  z-index: 500;
+  width: 100%;
+  border-radius: 16px;
+  text-decoration: none;
+  padding: 12px 24px;
+  float: left;
+  font-size: 1.25rem;
+  color: #000000;
+  background-color: #fff;
+  margin-bottom: 1.5rem;
+  box-shadow: var(--bx-shadow-2);
+  cursor: pointer;
+}
+.sort ul li p.selected{
+  background-color: #fdb135;
+  box-shadow: var(--bx-shadow-3);
 }
