--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -6,9 +6,13 @@
   margin-right: -1.5rem;
 }
 .slick-list{
-  padding: 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
   padding-bottom: 1.5rem;
 }
 .slick-initialized .slick-slide{
   padding-right: 2rem;
+}
+
+.infinite-scroll-component{
+  overflow: unset !important;
 }
